# slack-bots

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DJANGO_SETUP.md  Dockerfile  README.md  manage.py  manifest.json  pyproject.toml  railway.toml
announcements/: admin.py  models.py  slack_handlers.py  urls.py  views.py
announcements/migrations/: 0001_initial.py
app/: database.py  db_utils.py  main.py  slack_client.py
app/handlers/: actions.py  home.py  modals.py
app/services/: reminder.py
app/views/: __init__.py  blocks.py  home.py
app_old/: __init__.py  config.py  database.py  models.py  slack_client.py
app_old/handlers/: __init__.py  actions.py  home.py
app_old/services/: reminder.py
app_old/views/: modals.py
docs/: PRD.md  aws-logging-guide.md
notipy/: asgi.py  settings.py  urls.py  wsgi.py
src/: app.py  config.py  healthcheck.py  logging_config.py  sentry_config.py
src/clients/: dooray_client.py
src/commands/: dooray.py  notice.py
src/events/: home.py
src/middleware/: __init__.py  logging_middleware.py
src/services/: dooray_service.py  notice_service.py
src/store/: dooray_store.py  models.py  notice_store.py
src/views/: dooray_views.py  notice_views.py
tests/: __init__.py  conftest.py  test_app.py  test_dooray.py  test_healthcheck.py  test_models.py  test_notice.py  test_views.py
