[project]
name = "slack-bots"
version = "0.1.0"
description = "Slack bot for managing announcements and reminders"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "django>=5.0.0",
    "djangorestframework>=3.14.0",
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.33.0",
    "python-dotenv>=1.0.0",
    "django-environ>=0.11.0",
    "django-json-widget>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "httpx>=0.27.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
