[project]
name = "pycon-slack-bots"
version = "0.1.0"
description = "Slack bots for PyCon Korea"
readme = "README.md"
requires-python = ">=3.13.5"
authors = [
{name = "jungmir", email = "ham4051@gmail.com"}
]
dependencies = [
    "python-dotenv>=1.2.1",
    "slack-bolt>=1.21.0",
    "slack-sdk>=3.34.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
